--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Система учета задач студентов</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
